# YtDlpGUI

./: README.md  pyproject.toml
.github/workflows/: ci.ym
src/yt_dlp_gui_app/: __init__.py  main.py
src/yt_dlp_gui_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/yt_dlp_gui_app/core/: config.py  job_manager.py  models.py  thumbnail_generator.py  ui_bridge.py  yt_dlp_runner.py
src/yt_dlp_gui_app/tests/: conftest.py  test_job_manager.py  test_models.py  test_yt_dlp_runner.py
src/yt_dlp_gui_app/ui/: job_log_dialog.p  job_log_dialog.py  main_window.py  settings_dialog.py  theme_manager.py  url_input_lineedit.py
